<resources>
    <string name="app_name">Guess3</string>
    <string name="please_enter_a_number">Please enter a number(1~10)</string>
    <string name="ok">OK</string>
    <string name="you_got_it">You got it!</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">Smaller</string>
    <string name="dialog_title">Enter</string>
    <string name="title_activity_material">MaterialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
...
